[package]

name = "rback"
version = "0.0.2"
authors = ["davidb"]

[lib]
name = "rback"

[dependencies]
libc = "0.2.6"
toml = "0.1.26"
error-type = "0.1.2"
rustc-serialize = "0.3.16"
regex = "0.1.48"
chrono = "0.2.18"
clap = "2.0.1"
# log = "0.1"

rsure = { git = "https://github.com/d3zd3z/rsure" }

[[bin]]
name = "rback"
test = false
doc = false
