[package]

name = "rback"
version = "0.0.2"
authors = ["davidb"]

[lib]
name = "rback"

[dependencies]
libc = "0.2.11"
toml = "0.1.30"
error-type = "0.1.2"
rustc-serialize = "0.3.19"
regex = "0.1.71"
chrono = "0.2.22"
clap = "2.5.2"
# log = "0.1"

rsure = { git = "https://github.com/d3zd3z/rsure" }

[[bin]]
name = "rback"
test = false
doc = false
